Created new action cerca_qualcosa binded with intent cerca_qualcosa

--- a/Node/blog-LUISActionBinding/samples/web/views/index.pug
+++ b/Node/blog-LUISActionBinding/samples/web/views/index.pug
@@ -28,11 +28,9 @@ block content
 
         p Samples:
           ul
-            li What is the time in Miami?
-            li Search for 5 stars hotels in Barcelona
-            li Tell me the weather in Buenos Aires
-            li Find airport with code PMV
-
+            li Quanti documenti ci sono riguardanti l'azienda SAI?
+            li Cercami la persona Umberto Battistelli
+            li Cercami Vodafone
 
       input(type="submit", value="Continue")
       
